fix button alignment in top navs

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@ body {
     padding: 15px;
     text-align: center;
     width: 100%;
+    position: absolute;
 }
 
 .navbar-brand {float:none;}
